[metadata]
name = card_temps
version = 0.0.1
author = Matt Hutchison
author_email = matt.hutchison@gmail.com
description = A package to analyze and report on the FPGA card temperatures of the Gatan K3 camera.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/matthutchison/card_temps
project_urls =
classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research

[options]
packages = card_temps
python_requires = >=3.6
install_requires =
scripts =
    card_temperatures